--- a/init-environment/setup-database/build.gradle
+++ b/init-environment/setup-database/build.gradle
@@ -15,8 +15,10 @@ buildscript {
 		}	
 		maven {
 			url "http://repo.boundlessgeo.com/main"
-			//url "http://sogeo.services:8081/artifactory/boundless-main"
-		}		
+		}	
+		maven {
+			url "http://sogeo.services:8081/artifactory/libs-release"
+		}	
 		mavenCentral()		
 		maven { 
 			name "AGI gretl repository"
@@ -29,6 +31,7 @@ buildscript {
 	}
 	dependencies {
 		classpath("ch.so.agi:gretl:1.0.0")
+		classpath("ch.interlis:ili2pg:3.9.1")
 		classpath("org.geoscript:geoscript-groovy:1.9.0") {
 			exclude(module: 'commons-beanutils') // https://github.com/gradle/gradle/issues/1851
 		}
@@ -56,8 +59,8 @@ ext {
     setPropertyDefault('dbDatabase', 'xanadu2')
     setPropertyDefault('dbUsr', 'stefan')
     setPropertyDefault('dbPwd', 'xxxx')
-    setPropertyDefault('dbSchema', 'test1')
-    setPropertyDefault('modelName', 'DM01AVSO24LV95')
+    setPropertyDefault('dbSchema', 'arp_npl_export')
+    setPropertyDefault('modelName', 'SO_Nutzungsplanung_20170105')
 }
 
 
@@ -65,6 +68,12 @@ import geoscript.geom.*
 import geoscript.workspace.PostGIS
 import geoscript.layer.Shapefile
 import geoscript.proj.Projection
+
+import ch.ehi.ili2db.base.Ili2db
+import ch.ehi.ili2db.base.Ili2dbException
+import ch.ehi.ili2db.gui.Config
+import ch.ehi.ili2db.mapping.NameMapping
+import ch.ehi.sqlgen.generator.SqlConfiguration
 
 task setupPgExt(type: ch.so.agi.gretl.steps.SqlExecutorTask) {
 	description 'Creates postgis and uuid extension in database.'
@@ -133,6 +142,37 @@ task createNplsoSchema() {
 	
 	doLast {
 		println "fubar"
+		def config = new Config()
+        config.setModeldir(ch.interlis.ili2c.Main.ILI_REPOSITORY)
+        config.setDefaultSrsAuthority("EPSG")
+        config.setDefaultSrsCode("2056")
+        config.setMaxSqlNameLength(Integer.toString(NameMapping.DEFAULT_NAME_LENGTH))
+        config.setIdGenerator(ch.ehi.ili2db.base.TableBasedIdGen.class.getName())
+        config.setInheritanceTrafo(config.INHERITANCE_TRAFO_SMART1)
+        config.setValidation(false)
+        config.setCreateFkIdx(config.CREATE_FKIDX_YES)
+        config.setValue(SqlConfiguration.CREATE_GEOM_INDEX,"True")
+        config.setSqlNull(config.SQL_NULL_ENABLE)
+        config.setBasketHandling(config.BASKET_HANDLING_READWRITE)
+        config.setCreateDatasetCols(config.CREATE_DATASET_COL)
+        config.setTidHandling(config.TID_HANDLING_PROPERTY)
+        config.setNameOptimization(config.NAME_OPTIMIZATION_TOPIC)
+        config.setGeometryConverter(ch.ehi.ili2pg.converter.PostgisColumnConverter.class.getName())
+        config.setDdlGenerator(ch.ehi.sqlgen.generator_impl.jdbc.GeneratorPostgresql.class.getName())
+        config.setJdbcDriver("org.postgresql.Driver")
+        config.setIdGenerator(ch.ehi.ili2pg.PgSequenceBasedIdGen.class.getName())
+        config.setUuidDefaultValue("uuid_generate_v4()")
+        config.setDbhost(dbHost)
+        config.setDbdatabase(dbDatabase)
+        config.setDbport(dbPort)
+        config.setDbusr(dbUsr)
+        config.setDbpwd(dbPwd)
+        config.setDburl("jdbc:postgresql://" + dbHost + ":" + dbPort + "/" + dbDatabase)
+
+		config.setConfigReadFromDb(false)
+        config.setModels(modelName)
+		config.setDbschema(dbSchema)
+        Ili2db.runSchemaImport(config, "")
 	}
 }
 
